# AI-Gateway

./: .cnb.yml  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CNKI-20260412125415627.docx  Cargo.toml  LEARNING_GUIDE.md  LICENSE.txt  Prompt.md  QUICK_START.md  README.md  STAGE5_MANUAL_TEST_CHECKLIST.md  TOKEN_EXPLAINED.md  config.toml  custom-config.toml  openapi.yaml  postgres.dump  redirect.toml  session_cache.json  start.sh  workflow_follow.md
.cnb/: web_trigger.yml
.github/workflows/: contract-fast.yml  contract-slow.yml
.ide/: Dockerfile
benches/: endpoints.rs
data/: admin_ed25519.key
docs/: Develop1-1.md  Develop1-2.md  Develop1.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend_tui/: Cargo.toml  config.toml  session_cache.json
frontend_tui/src/: api.rs  config.rs  main.rs  session.rs  ui.rs
scripts/: biz3_lb.sh  biz_p0_p1.sh  contract_p0_p1.sh  generate_test_logs.sh  rbac_p0_p1.sh
scripts/_biz/: run_biz.py  run_lb.py
scripts/_contract/: README.md  requirements.txt  run_contract.py
scripts/_rbac/: requirements.txt  run_rbac.py
src/: balance.rs  error.rs  http_client.rs  main.rs  password_reset_tokens.rs  refresh_tokens.rs  subscription.rs  users.rs
src/admin/: mod.rs
src/config/: mod.rs  settings.rs
src/crypto/: mod.rs
src/db/: postgres.rs
src/logging/: database.rs  database_admin_tokens.rs  database_balance.rs  database_cache.rs  database_client_tokens.rs  database_favorites.rs  database_keys.rs  database_model_redirects.rs  database_model_settings.rs  database_organizations.rs  database_password_reset_tokens.rs  database_pricing.rs  database_provider_ops.rs  database_providers.rs  database_refresh_tokens.rs  database_subscription.rs  database_users.rs  mod.rs  postgres_balance.rs  postgres_password_reset_tokens.rs  postgres_refresh_tokens.rs  postgres_store.rs  postgres_subscription.rs  postgres_users.rs  time.rs  types.rs
src/providers/: adapters.rs  anthropic.rs  mod.rs  openai.rs  streaming.rs  zhipu.rs
src/routing/: key_rotation.rs  load_balancer.rs  mod.rs
src/server/: chat_request.rs  handlers.rs  login.rs  mod.rs  model_cache.rs  model_display.rs  model_helpers.rs  model_parser.rs  model_redirect.rs  model_types.rs  pricing.rs  pricing_sync.rs  provider_dispatch.rs  (+8 more)
tui/: config.toml
(+70 files in other folders)
