[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1.47.1", features = ["full"] }

# 序列化和反序列化
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"

# HTTP 客户端和服务器
reqwest = { version = "0.12.23", features = ["json", "stream"] }
axum = { version = "0.8.4", features = ["json"] }

# 流式处理
tokio-stream = "0.1.17"
futures-util = "0.3.31"
thiserror = "2.0.16"
reqwest-eventsource = "0.6.0"

# 数据库
rusqlite = { version = "0.37.0", features = ["bundled"] }

# 工具类
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }

# 日志
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# 中间件
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
rand = "0.9.2"

[dev-dependencies]
tempfile = "3"
